syntax = "proto3";

package agent;

import "core.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb";

enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_RUNNING = 1;
  AGENT_STATUS_SUCCESS = 2;
  AGENT_STATUS_FAILED = 3;
}

// -----------------------------------------------------------------------------
// Commands
// -----------------------------------------------------------------------------

message CmdAgentExecute {
  core.AgentMetadata metadata = 1;

  message Details {
    core.AgentRequest agent_request = 1;
  }
  Details details = 2;
}

// -----------------------------------------------------------------------------
// Events
// -----------------------------------------------------------------------------

message EventAgentStarted {
  core.AgentMetadata metadata = 1;

  message Details {
    AgentStatus status = 1;
  }
  Details details = 2;
}

message EventAgentSuccess {
  core.AgentMetadata metadata = 1;

  message Details {
    AgentStatus status = 1;
    google.protobuf.Struct result = 2;
    int64 duration_ms = 3;
  }
  Details details = 2;
}

message EventAgentFailed {
  core.AgentMetadata metadata = 1;

  message Details {
    AgentStatus status = 1;
    core.ErrorResult error = 2;
    int64 duration_ms = 3;
  }
  Details details = 2;
}
